--- a/reading-order/reading-order.html
+++ b/reading-order/reading-order.html
@@ -1,1 +1,42 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reading Order</title>
+    <link rel="stylesheet" href="reading-order.css">
+    <link rel="stylesheet" href="nav.css">
+</head>
+<body>
+    <nav>
+        <div id="marvel-logo">
+            <a href="../home.html"><img src="../images/Marvel-comic-logo.jpeg" alt="marvel-logo" id="marvel-logo"></a>
+        </div>
+        <div class="nav-middle">
+            <ul>
+                <li class="list-items"><a href="../reading-tracker/reading-tracker.html" class="list-items">Reading Tracker</a></li>
+                <li class="list-items"><a href="../library/library.html" class="list-items">Library</a></li>
+                <li class="list-items"><a href="../tbr/tbr.html" class="list-items">TBR</a></li>
+                <li class="list-items"><a href="../reading-order/reading-order.html" class="list-items">Reading Order</a></li>
+            </ul>
+        </div>
+        <div class="nav-right">
+            <ul>
+                <li id="sign-up" class="list-items"><a href="../sign-up/sign-up.html" class="list-items">Register</a></li>
+                <li class="list-items"><a href="../login/login.html" class="list-items">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <div id="knights" class="grow">
+                <img src="../images/knights.jpeg" alt="knights-logo" id="knights-logo">
+                Marvel Knights Reading Order
+            </div>
+            <div>X-Men</div>
+        </div>
+    </main>
+
+    <script src="reading-order.js"></script>
+</body>
+</html>
